--- a/examples/button/pyproject.toml
+++ b/examples/button/pyproject.toml
@@ -14,7 +14,9 @@ author_email = "tiberius@beeware.org"
 formal_name = "Button Demo"
 description = "A testing app"
 sources = ['button']
-requires = []
+requires = [
+    'c:/Projects/Python/Toga/src/core'
+]
 
 
 [tool.briefcase.app.button.macOS]
@@ -40,5 +42,6 @@ requires = [
 
 [tool.briefcase.app.button.android]
 requires = [
-    'toga-android',
+    # 'toga-android',
+    'c:/Projects/Python/Toga/src/android'
 ]
